Sun Aug 15 10:27:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Session/Session_Container.cpp:
          Fixed some refcount problems

Sat Aug 14 18:15:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DomainParticipantFactory_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
        * connectors/dds4ccm/impl/Publisher_T.cpp:
        * connectors/dds4ccm/impl/Subscriber_T.cpp:
          Corrected error levels and use some DEBUG macros instead of ERROR

Fri Aug 13 15:47:22 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * connectors/dds4ccm/examples/Shapes/models/Shapes-complete-delegation.xme:

          Example illustrating delegation.

Fri Aug 13 06:07:23 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * connectors/dds4ccm/models/dds4ccm.xme:

          Re-generated dds4ccm library since some of the elements
          were missing.

Thu Aug 12 19:35:41 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors.idl:
        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors_Base_Impl.h:
        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors_Base_Impl.cpp:

          Removed the superfluous 'instance_' prefix on most operations.

        * DAnCE/LocalityManager/Interceptors/Best_Effort.h:
        * DAnCE/LocalityManager/Interceptors/Best_Effort.cpp:
        * DAnCE/LocalityManager/Interceptors/Standard_Error.h:
        * DAnCE/LocalityManager/Interceptors/Standard_Error.cpp:
        * DAnCE/LocalityManager/Scheduler/Events/Configured.cpp:
        * DAnCE/LocalityManager/Scheduler/Events/Connect.cpp:
        * DAnCE/LocalityManager/Scheduler/Events/Install.cpp:
        * DAnCE/LocalityManager/Scheduler/Events/Passivate.cpp:
        * DAnCE/LocalityManager/Scheduler/Events/Remove.cpp:
        * DAnCE/LocalityManager/Scheduler/Events/Start.cpp:
        * DAnCE/tools/System_Health/Interceptors/SHS_Interceptor.h: